gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: defgatclass
spec:
  controllerName: sonae.mc.pt/gateway-controller
