gateway/routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: defroute
  namespace: default
spec:
  parentRefs:
    - name: defgateway
      namespace: default
  rules:
    - backendRefs:
        - name: web-svc
          port: 80
